@@ -10,11 +10,11 @@ import org.lox.townyDuel.managers.KitManager;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 public class CreateKitCommand implements CommandExecutor, TabCompleter {
-
-    private KitManager kitManager;
+    private final KitManager kitManager;
 
     public CreateKitCommand(KitManager kitManager) {
         this.kitManager = kitManager;
@@ -23,43 +23,43 @@ public class CreateKitCommand implements CommandExecutor, TabCompleter {
     @Override
     public boolean onCommand(CommandSender sender, Command command, String label, String[] args) {
         if (!(sender instanceof Player)) {
-            sender.sendMessage("Эту команду могут использовать только игроки!");
+            sender.sendMessage("Эта команда может быть выполнена только игроком.");
             return true;
         }
 
         Player player = (Player) sender;
 
-        if (args.length != 2) {
-            player.sendMessage("Использование: /createkit <save|remove> <название_кита>");
+        if (args.length < 2) {
+            player.sendMessage("Использование: /createkit save|remove {название кита}");
             return true;
         }
 
         String action = args[0];
         String kitName = args[1];
 
-        if (action.equalsIgnoreCase("save")) {
-            ItemStack[] inventoryContents = player.getInventory().getContents();
-            kitManager.saveKit(kitName, inventoryContents);
-            player.sendMessage("Кит '" + kitName + "' сохранён.");
-        } else if (action.equalsIgnoreCase("remove")) {
-            if (kitManager.removeKit(kitName)) {
+        switch (action.toLowerCase()) {
+            case "save":
+                kitManager.saveKit(kitName, player.getInventory().getContents());
+                player.sendMessage("Кит '" + kitName + "' сохранён.");
+                break;
+            case "remove":
+                kitManager.removeKit(kitName);
                 player.sendMessage("Кит '" + kitName + "' удалён.");
-            } else {
-                player.sendMessage("Кит с названием '" + kitName + "' не найден.");
-            }
-        } else {
-            player.sendMessage("Неизвестная команда.");
+                break;
+            default:
+                player.sendMessage("Неверное использование команды. Используйте: save или remove.");
         }
 
         return true;
     }
+
     @Override
-    public List<String> onTabComplete(CommandSender sender, Command command, String alias, String[] args) {
+    public List<String> onTabComplete(CommandSender sender, Command command, String label, String[] args) {
         if (args.length == 1) {
-            return Arrays.asList("save", "remove");
-        } else if (args.length == 2 && args[0].equalsIgnoreCase("remove")) {
+            return List.of("save", "remove");
+        } else if (args.length == 2) {
             return new ArrayList<>(kitManager.getKits().keySet());
         }
-        return null;
+        return Collections.emptyList();
     }
 }
